Mon, 14 Jul 2008 12:31:15 -0400 <me@nikosapi.org>
Merge patch to fix bug #122 (Day of week Released date not computed correctly)

	* src/gpodder/libpodcasts.py: use rfc822.mktime_tz() to convert
	timestamps from feedparser's _parse_date() function to seconds from
	the epoch (in UTC instead of the local timezone)
	* src/gpodder/util.py: fix util.format_date() so that when it reports
	'Today', it means the timestamp is from after 00:00 local time

Mon, 14 Jul 2008 12:21:37 -0400 <me@nikosapi.org>
Merge patch to fix bug #125 (Deleting a podcast while checking for new
episodes allows a second concurrent sync.)

	* src/gpodder/gui.py: make update_feed_cache() check if the feed cache
	is being updated before allowing an update to take place

Sun, 13 Jul 2008 15:32:22 -0400 <me@nikosapi.org>
Fix python 2.4 crash (reported by: Wilfred van Rooijen)

	* src/gpodder/draw.py: change ".5 if close else 0" to valid python
	2.4 syntax

Sun, 13 Jul 2008 15:19:39 -0400 <me@nikosapi.org>
Fix MP3PlayerDevice traceback when syncing (reported by: Wilfred van Rooijen)

	* src/gpodder/sync.py: make Device.__track_on_device() non-private

Sat, 12 Jul 2008 14:12:11 +0200 <jerome.chabod@ifrance.com>
Merge patch to fix bug #149 (Remove Old Podcasts does not always have enabled 
delete button)
	* src/gpodder/gui.py: Use count of selected episodes instead of total
    size to activate action button in episode selector (episodes with
    unknow size have a total size of zero) 

Fri, 11 Jul 2008 14:11:08 -0400 <me@nikosapi.org>
Merge patch to fix bug #147 (Sync doesn't work)

	* src/gpodder/gui.py: Use Device.episode_on_device(episode) to retrive
	device_episode and simplify logic to determine whether an episode is on
	the device and eligible for removal
	* src/gpodder/sync.py: Add Device.episode_on_device(episode)

Fri, 11 Jul 2008 13:09:55 -0400 <me@nikosapi.org>
Update podcast tab title when adding or removing channels

	* src/gpodder/gui.py: Add update_podcasts_tab() and call it when a